--- a/src/template/profitelo_theme/stylesheets/common/components/settings/modals/general/basic-account-settings/basic-account-settings.sass
+++ b/src/template/profitelo_theme/stylesheets/common/components/settings/modals/general/basic-account-settings/basic-account-settings.sass
@@ -1,6 +1,12 @@
+@import "../../../../../../../../../template/profitelo_theme/stylesheets/core/helpers/helpers"
+@import "../../../../../../../../../template/profitelo_theme/stylesheets/variables/variables"
+
 .basic-account-settings
   h2
-    margin: 0 0 32px
+    margin: 0 0 16px
+
+    +xsm
+      margin: 0 0 32px
 
     +smm
       margin: 0 0 64px
